--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -326,6 +326,6 @@ and open the template in the editor.
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <script src="js/lightbox.min.js"></script>
-        <script src="app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
