--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,13 +22,11 @@ and open the template in the editor.
         <![endif]-->
         <div class="container-fluid">
             <nav class="navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="navbar-header col-sm-offset-4">
-                            <a class="navbar-brand navbar-brand-center" href="index.html">
-                                <img src="img/brand1.png" class="img-responsive" id="navbar-name">
-                            </a>
-                        </div>
+                <div class="container-fluid center">
+                    <div class="navbar-header">
+                        <a class="navbar-brand navbar-brand-center" href="index.html">
+                            <img src="img/brand1.png" class="img-responsive">
+                        </a>
                     </div>
                 </div>
             </nav>
