--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,12 +22,10 @@ and open the template in the editor.
         <![endif]-->
         <div class="container-fluid">
             <nav class="navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid center">
-                    <div class="navbar-header">
-                        <a class="navbar-brand navbar-brand-center" href="index.html">
-                            <img src="img/brand1.png" class="img-responsive">
-                        </a>
-                    </div>
+                <div class="center">
+                    <a class="navbar-brand navbar-center" href="index.html">
+                        <img src="img/brand1.png" class="img-responsive">
+                    </a>
                 </div>
             </nav>
             <div class="container">
