--- a/public_html/resume.html
+++ b/public_html/resume.html
@@ -33,7 +33,7 @@ and open the template in the editor.
                         <a class="navbar-brand navbar-name-left" href="index.html"><img src="img/brand.png" class="img-responsive"></a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav pull-right">
                             <li>
                                 <a href="resume.html">
                                     <button type="button" class="btn btn-default navbar-btn" id="active">resume<span class="sr-only">(current)</span></button>
@@ -67,10 +67,10 @@ and open the template in the editor.
                                 <h3>Professional Experience</h3>
                                 <div class="job row">
                                     <h4 class="job-title col-sm-5 col-sm-offset-2">freelance web designer/developer</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2014-present</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2014-present</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>wireframes (Balsamiq)</li>
                                         <li>Photoshop mockups</li>
                                         <li>Netbeans</li>
@@ -81,10 +81,10 @@ and open the template in the editor.
                                 </div>
                                 <div class="job row">
                                     <h4 class="job-title col-sm-5 col-sm-offset-2">freelance graphic designer</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2012-present</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2012-present</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>logos</li>
                                         <li>images for iOS applications</li>
                                         <li>Wacom tablet</li>
@@ -93,13 +93,13 @@ and open the template in the editor.
                                 </div>
                                 <div class="job row">
                                     <h4 class="job-title col-sm-5 col-sm-offset-2">business office assistant</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2014-present</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2014-present</h5>
                                 </div>
                                 <div>
-                                    <h5 class="subheader col-sm-4 col-sm-offset-3">Robinwood Dental Center</h5>
+                                    <h5 class="subheader col-xs-offset-1 col-sm-4 col-sm-offset-3">Robinwood Dental Center</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>billing</li>
                                         <li>insurance</li>
                                         <li>customer service</li>
@@ -108,13 +108,13 @@ and open the template in the editor.
                                 </div>
                                 <div class="job row">
                                     <h4 class="job-title col-sm-5 col-sm-offset-2">substitute teacher</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2014</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2014</h5>
                                 </div>
                                 <div>
-                                    <h5 class="subheader col-sm-6 col-sm-offset-3">Montgomery County Public School System</h5>
+                                    <h5 class="subheader col-xs-offset-1 col-sm-6 col-sm-offset-3">Montgomery County Public School System</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>middle school</li>
                                         <li>mathematics</li>
                                         <li>classroom management</li>
@@ -122,13 +122,13 @@ and open the template in the editor.
                                 </div>
                                 <div class="job row">
                                     <h4 class="job-title col-sm-5 col-sm-offset-2">substitute teacher</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2013</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2013</h5>
                                 </div>
                                 <div>
-                                    <h5 class="subheader col-sm-6 col-sm-offset-3">Greater Collegedale School System</h5>
+                                    <h5 class="subheader col-xs-offset-1 col-sm-6 col-sm-offset-3">Greater Collegedale School System</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>middle school</li>
                                         <li>various subjects</li>
                                         <li>classroom management</li>
@@ -136,23 +136,23 @@ and open the template in the editor.
                                 </div>
                                 <div class="job row">
                                     <h4 class="job-title col-sm-5 col-sm-offset-2">private art teacher</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2013</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2013</h5>
                                 </div>
                                 <div class="row">  
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>grades 6-9</li>
                                         <li>drawing, painting, print, clay, art history</li>
                                     </ul>
                                 </div>
                                 <div class="job row">
                                     <h4 class="job-title col-sm-5 col-sm-offset-2">art museum intern</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2011</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2011</h5>
                                 </div>
                                 <div>
-                                    <h5 class="subheader col-sm-4 col-sm-offset-3">Dayton Art Institute</h5>
+                                    <h5 class="subheader col-xs-offset-1 col-sm-4 col-sm-offset-3">Dayton Art Institute</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>classroom instruction</li>
                                         <li>project development</li>
                                     </ul>
@@ -162,10 +162,10 @@ and open the template in the editor.
                                 <h3>education</h3>
                                 <div class="school row">
                                     <h4 class="school-title col-sm-5 col-sm-offset-2">Southern Adventist University</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2008-2012</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2008-2012</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>bachelor's degree in art education</li>
                                         <li>minor in mathematics</li>
                                         <li>summa cum laude</li>
@@ -174,10 +174,10 @@ and open the template in the editor.
                                 </div>
                                 <div class="school row">
                                     <h4 class="school-title col-sm-5 col-sm-offset-2">Spring Valley Academy</h4>
-                                    <h5 class="dates col-sm-2 col-sm-offset-2">2004-2008</h5>
+                                    <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">2004-2008</h5>
                                 </div>
                                 <div class="row">
-                                    <ul class="col-sm-6 col-sm-offset-4">
+                                    <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                         <li>valedictorian</li>
                                         <li>honors diploma</li>
                                         <li>National Honors Society</li>
@@ -188,26 +188,26 @@ and open the template in the editor.
                                     <h3>volunteer work</h3>
                                     <div class="volunteer row">
                                         <h4 class="volunteer-title col-sm-5 col-sm-offset-2">mission trip to Quito, Ecuador</h4>
-                                        <h5 class="dates col-sm-2 col-sm-offset-2">July 2007</h5>
+                                        <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">July 2007</h5>
                                     </div>
                                     <div>
-                                        <h5 class="subheader col-sm-5 col-sm-offset-3">Maranatha Volunteer Organization</h5>
+                                        <h5 class="subheader col-xs-offset-1 col-sm-5 col-sm-offset-3">Maranatha Volunteer Organization</h5>
                                     </div>
                                     <div class="row">
-                                        <ul class="col-sm-6 col-sm-offset-4">
+                                        <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                             <li>construction of a church</li>
                                             <li>community service activities</li>
                                         </ul>
                                     </div>
                                     <div class="volunteer row">
                                         <h4 class="volunteer-title col-sm-5 col-sm-offset-2">mission trip to Iquitos, Peru</h4>
-                                        <h5 class="dates col-sm-2 col-sm-offset-2">July 2005</h5>
+                                        <h5 class="dates col-xs-offset-1 col-sm-2 col-sm-offset-2">July 2005</h5>
                                     </div>
                                     <div>
-                                        <h5 class="subheader col-sm-5 col-sm-offset-3">Maranatha Volunteer Organization</h5>
+                                        <h5 class="subheader col-xs-offset-1 col-sm-5 col-sm-offset-3">Maranatha Volunteer Organization</h5>
                                     </div>
                                     <div class="row">
-                                        <ul class="col-sm-6 col-sm-offset-4">
+                                        <ul class="col-xs-offset-2 col-sm-6 col-sm-offset-4">
                                             <li>construction of a church</li>
                                             <li>medical and dental outreach</li>
                                         </ul>
@@ -216,7 +216,7 @@ and open the template in the editor.
                                 <div>
                                     <h3>skills</h3>
                                     <div class="row">
-                                        <ul id="skills-list" class="col-sm-6 col-sm-offset-3">
+                                        <ul id="skills-list" class="col-xs-offset-1 col-sm-6 col-sm-offset-3">
                                             <li>design</li>
                                             <li>Adobe Creative Suite</li>
                                             <li>HTML, CSS, jQuery, JavaScript</li>
