--- a/public_html/about.html
+++ b/public_html/about.html
@@ -33,7 +33,7 @@ and open the template in the editor.
                         <a class="navbar-brand navbar-name-left" href="index.html"><img src="img/brand.png" class="img-responsive"></a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav pull-right">
                             <li>
                                 <a href="resume.html">
                                     <button type="button" class="btn btn-default navbar-btn" id="resume-hover">resume</button>
@@ -104,6 +104,6 @@ and open the template in the editor.
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <script src="app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
