--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -33,7 +33,7 @@ and open the template in the editor.
                         <a class="navbar-brand navbar-name-left" href="index.html"><img src="img/brand.png" class="img-responsive"></a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav pull-right">
                             <li>
                                 <a href="resume.html">
                                     <button type="button" class="btn btn-default navbar-btn" id="resume-hover">resume</button>
