--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -34,7 +34,7 @@ and open the template in the editor.
                         <a class="navbar-brand navbar-name-left" href="index.html"><img src="img/brand.png" class="img-responsive"></a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav pull-right">
                             <li>
                                 <a href="resume.html">
                                     <button type="button" class="btn btn-default navbar-btn" id="resume-hover">resume</button>
@@ -62,7 +62,9 @@ and open the template in the editor.
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <div id="portfolio-background">
-                        <h2 class="title">portfolio</h2>
+                        <div>
+                            <h2 class="title">portfolio</h2>
+                        </div>
                         <h3>wireframes</h3>
                         <div class="row">
                             <a href="img/dentalStatsWire_dashboard.jpg" data-lightbox="wireframes">
