--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -18,8 +18,8 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="customStyle.css">
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browser">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <!--[if lt IE 9]>
+            <p class="browser">You are using an outdated browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container-fluid">
             <nav class="navbar navbar-default navbar-fixed-top">
