IE Warning and Font Sizes

--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -18,7 +18,7 @@ and open the template in the editor.
     </head>
     <body>
         <!--[if lt IE 9]>
-            <p class="browser">You are using an outdated browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browser">Your browser is <strong>outdated</strong>. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container-fluid">
             <nav class="navbar navbar-default navbar-fixed-top">
@@ -71,12 +71,12 @@ and open the template in the editor.
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 contact-white">
+                                <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 contact-white">
                                     <p><span class="label label-default" id="phone-label">phone</span>937&#8209;626&#8209;7312</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 contact-white">
+                                <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 contact-white">
                                     <p><span class="label label-default" id="email-label">email</span><a href="mailto:nomurajane@gmail.com" id="email-link">nomurajane@gmail.com</a></p>
                                 </div>
                             </div>
