--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -19,7 +19,7 @@ and open the template in the editor.
     </head>
     <body>
         <!--[if lt IE 9]>
-            <p class="browser">You are using an outdated browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browser">Your browser is <strong>outdated</strong>. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container-fluid">
             <nav class="navbar navbar-default navbar-fixed-top">
