--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,63 +1,123 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Jane Nomura</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <!-- bootstrap -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <!-- my style alterations -->
-        <link rel="stylesheet" type="text/css" href="customStyle.css">
+        <!-- Bootstrap CSS -->
+        <link href="vendor/bootstrap/css/bootstrap-reboot.css" rel="stylesheet">
+        <link href="vendor/bootstrap/css/bootstrap-grid.css" rel="stylesheet">
+        <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <!-- Custom CSS -->
+        <!--[if gt IE 9]><!-->
+            <link href="css/custom.css" rel="stylesheet" >
+        <!--<![endif]-->
+        <!--[if lte IE 9]>
+            <link href="css/custom-ie.css" rel="stylesheet">
+        <![endif]-->
+        <link href="css/media-queries.css" rel="stylesheet">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </head>
     <body>
-        <!--[if lt IE 9]>
-            <p class="browser">Your browser is <strong>outdated</strong>. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <!--[if lte IE 9]>
+            <p class="browser-warning">You are using a very <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <div class="font-load">&nbsp;</div>
+        <div class="container-fluid" id="container-name">
+            <div>
+                <ul class="name-grid row d-flex justify-content-center">
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="J">J</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="A">A</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="N">N</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="E">E</span></li>
+                    <li class="letter col-xs-12 col-sm-1" id="letter-n"><span data-letter="N">N</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="O">O</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="M">M</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="U">U</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="R">R</span></li>
+                    <li class="letter col-xs-12 col-sm-1"><span data-letter="A">A</span></li>
+                </ul>
+            </div>
+        </div>
         <div class="container-fluid">
-            <nav class="navbar navbar-default navbar-fixed-top">
-                <div class="center">
-                    <a class="navbar-brand navbar-center" href="index.html">
-                        <img src="img/brand1.png" class="img-responsive">
-                    </a>
+            <nav class="navbar navbar-expand-sm navbar-light bg-faded">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="#">Logo</a>
+                <div class="collapse navbar-collapse" id="nav-content">   
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link 1</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link 2</a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
-            <div class="container">
-                <div class="row" id="nav">
-                    <div class="col-xs-offset-1 col-sm-3 col-sm-offset-0">
-                        <a href="resume.html">
-                            <button type="button" class="btn btn-default navbar-btn index-navbar-btn" id="resume-hover">resume</button>
-                        </a>
-                    </div>
-                    <div class="col-xs-offset-1 col-sm-3 col-sm-offset-0">
-                        <a href="portfolio.html">
-                            <button type="button" class="btn btn-default navbar-btn index-navbar-btn" id="portfolio-hover">portfolio</button>
-                        </a>
-                    </div>
-                    <div class="col-xs-offset-1 col-sm-3 col-sm-offset-0">
-                        <a href="contact.html">
-                            <button type="button" class="btn btn-default navbar-btn index-navbar-btn" id="contact-hover">contact</button>
-                        </a>
-                    </div>
-                    <div class="col-xs-offset-1 col-sm-3 col-sm-offset-0">
-                        <a href="about.html">
-                            <button type="button" class="btn btn-default navbar-btn index-navbar-btn" id="about-hover">about</button>
-                        </a>
-                    </div>
+        </div>
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-3">
+                        <canvas id="chart-languages" width="200" height="200"></canvas>                        
+                </div>
+                <div class="col-3">
+                        <canvas id="chart-ides" width="200" height="200"></canvas>                        
+                </div>
+                <div class="col-3">
+                        <canvas id="chart-libraries" width="200" height="200"></canvas>                        
                 </div>
             </div>
-            <div><p class="copyright">&copy; Jane Nomura 2015</p></div>
         </div>
-        <!-- Optional: jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <script src="js/app.js"></script>
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+        <!-- Tether JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+        <!-- Bootstrap JS -->
+        <script src="vendor/bootstrap/js/bootstrap.js"></script>
+        <!-- Waypoints JS -->
+        <script src="vendor/waypoints/js/jquery.waypoints.min.js"></script>
+        <!-- CHART JS -->
+        <script src="vendor/chart/js/Chart.js"></script>
+        <!--[if gt IE 9]><!-->
+            <script src="js/custom.js"></script>
+        <!--<![endif]-->
+        <script>
+            var ctxLanguages = $("#chart-languages");
+            var ctxIdes = $("#chart-ides");
+            var ctxLibraries = $("#chart-libraries");
+            data = {
+                datasets: [{
+                    data: [10, 20]
+                }],
+
+                // These labels appear in the legend and in the tooltips when hovering different arcs
+                labels: [
+                    'Red',
+                    'Yellow'               
+                ]
+            };
+            var chartLanguages = new Chart(ctxLanguages, {
+                type: 'polarArea',
+                data: data
+            });
+            var chartIdes = new Chart(ctxIdes, {
+                type: 'polarArea',
+                data: data
+            });
+            var chartLibraries = new Chart(ctxLibraries, {
+                type: 'polarArea',
+                data: data
+            });
+        </script>
     </body>
 </html>
