--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,25 +47,33 @@
                 </ul>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid" id="container-navbar">
             <nav class="navbar navbar-expand-sm navbar-light bg-faded">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="#">Logo</a>
                 <div class="collapse navbar-collapse" id="nav-content">   
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 1</a>
+                            <a class="nav-link" href="#">skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 2</a>
+                            <a class="nav-link" href="#">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
-        <div class="container">
+        <div class="container" id="container-main-content">
             <div class="row d-flex justify-content-center">
                 <div class="col-3">
                         <canvas id="chart-languages" width="200" height="200"></canvas>                        
