--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,7 +33,7 @@
         <div class="font-load">&nbsp;</div>
         <div class="container-fluid" id="container-name">
             <div>
-                <ul class="name-grid row d-flex justify-content-center">
+                <ul class="name-grid row justify-content-center">
                     <li class="letter col-xs-12 col-sm-1"><span data-letter="J">J</span></li>
                     <li class="letter col-xs-12 col-sm-1"><span data-letter="A">A</span></li>
                     <li class="letter col-xs-12 col-sm-1"><span data-letter="N">N</span></li>
@@ -74,111 +74,187 @@
             </nav>
         </div>
         <div class="container" id="container-skills">
-            <!--<div class="row d-flex justify-content-center">
-                <h2 id="bar-title">Languages, Frameworks + Libraries</h2>
-            </div>-->
-            <div class="row d-flex justify-content-center align-items-end" id="bar-libraries">
+            <div class="row justify-content-center align-items-end" id="bar-libraries">
                 <div class="col-1">
                     <div class="mx-auto" id="bar-css"></div>
-                    <h2 class="bar-title">CSS3</h2>
+                    <h3 class="bar-title">CSS3</h3>
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-less"></div>      
-                    <h2 class="bar-title">Less</h2>                 
+                    <h3 class="bar-title">Less</h3>                 
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-sass"></div>
-                    <h2 class="bar-title">Sass</h2>
+                    <h3 class="bar-title">Sass</h3>
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-html"></div>      
-                    <h2 class="bar-title">HTML5</h2>                 
+                    <h3 class="bar-title">HTML5</h3>                 
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-js"></div>
-                    <h2 class="bar-title">JavaScript</h2>
+                    <h3 class="bar-title">JavaScript</h3>
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-php"></div>      
-                    <h2 class="bar-title">PHP</h2>                 
+                    <h3 class="bar-title">PHP</h3>                 
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-sql"></div>
-                    <h2 class="bar-title">SQL</h2>
+                    <h3 class="bar-title">SQL</h3>
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-java"></div>      
-                    <h2 class="bar-title">Android SDK</h2>                 
+                    <h3 class="bar-title">Android SDK</h3>                 
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-c"></div>
-                    <h2 class="bar-title">C#</h2>
+                    <h3 class="bar-title">C#</h3>
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-jquery"></div>
-                    <h2 class="bar-title">jQuery</h2>
+                    <h3 class="bar-title">jQuery</h3>
                 </div>
                 <div class="col-1">
                     <div class="mx-auto" id="bar-bootstrap"></div>      
-                    <h2 class="bar-title">Bootstrap</h2>                 
+                    <h3 class="bar-title">Bootstrap</h3>                 
                 </div>
             </div>
-            <div class="row d-flex justify-content-center align-items-start">
-                <div class="col-3">
-                    <h2 class="chart-title">Design</h2>
-                    <canvas id="chart-design" width="200" height="200"></canvas>                        
+            <hr class="mx-auto hr-row-separator">
+            <div class="row justify-content-center align-items-start" id="bar-line">
+                <div class="col-4" id="design-col">
+                    <h2>Design</h2>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>Photoshop</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-photoshop"></div>                                      
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>Illustrator</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-illustrator"></div>                                      
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>InDesign</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-indesign"></div>                                      
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>Balsamiq</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-balsamiq"></div>                                      
+                        </div>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <h2 class="chart-title">CMS</h2>                        
-                    <canvas id="chart-cms" width="200" height="200"></canvas>                        
+                <div class="col-4" id="cms-col">
+                    <h2>CMS</h2>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>Wordpress</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-wordpress"></div>                                      
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>Joomla</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-joomla"></div>                                      
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>Drupal</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-drupal"></div>                                      
+                        </div>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <h2 class="chart-title">Databases</h2>                        
-                    <canvas id="chart-databases" width="200" height="200"></canvas>                        
+                <div class="col-4" id="db-col">
+                    <h2>Databases</h2>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>Access</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-access"></div>                                      
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>MySQL</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-mysql"></div>                                      
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>SQLite</h3>
+                        </div>
+                        <div class="col-8">
+                            <div class="" id="bar-sqlite"></div>                                      
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id="other-technologies">
-                <section class="d-flex flex-row">
-                    <h3 class="p-2">Version Control </h3>
-                    <ul class="p-2">
+            <hr class="mx-auto hr-row-separator">            
+            <div class="row clearfix mx-auto" id="other-technologies">
+                <section class="col-4 technologies-section">
+                    <h2>Version Control </h2>
+                    <ul>
                         <li>Git</li>
                         <li>GitLab</li>
                         <li>GitHub</li>
                         <li>SourceTree</li>
                     </ul>
                 </section>
-                <section class="d-flex flex-row">
-                    <h3 class="p-2">IDEs </h3>
-                    <ul class="p-2">
+                <section class="col-4 technologies-section">
+                    <h2>IDEs </h2>
+                    <ul>
                         <li>Android Studio</li>
                         <li>Visual Studio</li>
                         <li>Webstorm</li>
                     </ul>
                 </section>
-                <section class="d-flex flex-row">
-                    <h3 class="p-2">APIs </h3>
-                    <ul class="p-2">
+                <section class="col-4 technologies-section">
+                    <h2>APIs </h2>
+                    <ul>
                         <li>Google Maps APIs</li>
                         <li>Google Transit APIs</li>
+                        <li>GCM</li>
                     </ul>
                 </section>
             </div>
         </div>
-        <hr class="hr-container-separater">
-        <div class="container" id="container-about">
-            <div class="row d-flex justify-content-center">
-            </div>
+        <hr class="hr-container-separator">
+        <div class="container" id="container-about">   
         </div>
+        <hr class="hr-container-separator">        
         <div class="container" id="container-portfolio">
-            <div class="row d-flex justify-content-center">
+            <div class="row justify-content-center">
             </div>
         </div>
         <div class="container" id="container-resume">
-            <div class="row d-flex justify-content-center">
+            <div class="row justify-content-center">
             </div>
         </div>
         <div class="container" id="container-contact">
-            <div class="row d-flex justify-content-center">
+            <div class="row justify-content-center">
             </div>
         </div>
         <!-- jQuery -->
@@ -189,14 +265,12 @@
         <script src="vendor/bootstrap/js/bootstrap.js"></script>
         <!-- Waypoints JS -->
         <script src="vendor/waypoints/js/jquery.waypoints.min.js"></script>
-        <!-- CHART JS -->
-        <script src="vendor/chart/js/Chart.js"></script>
         <!-- PROGRESSBAR JS -->
         <script src="vendor/progressbar/js/progressbar.js"></script>
         <!--[if gt IE 9]><!-->
             <script src="js/custom.js"></script>
-            <script src="js/custom-chart.js"></script>
             <script src="js/custom-progressbar.js"></script>
+            <script src="js/custom-progressbar-line.js"></script>
         <!--<![endif]-->
     </body>
 </html>
