Add about content (un-styled)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -242,7 +242,42 @@
             </div>
         </div>
         <hr class="hr-container-separator">
-        <div class="container" id="container-about">   
+        <div class="container" id="container-about"> 
+            <div class="row">
+                <div class="col-6">
+                    <p id="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sollicitudin ultricies elit. Maecenas vitae enim sed neque cursus pellentesque. Mauris eu nisl pulvinar, ultrices purus nec, mattis ligula. Praesent egestas euismod est a varius. Proin malesuada nulla in sagittis congue. Fusce malesuada est ante, nec tempus magna hendrerit ac. Aliquam venenatis, neque vel sollicitudin tempor, neque quam ultrices ante, quis aliquam dolor mauris in ante. Praesent non nulla tortor.</p>
+                </div>
+                <div class="col-6">
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h2>My Favorite Things</h2>
+                    <ul id="favorite-things">
+                        <li>Being entertained by my husband, son, and crazy dog</li>
+                        <li>Fine art and art history</li>
+                        <li>Camping, hiking, and backpacking in the great outdoors</li>
+                        <li>Soccer and floor hockey</li>
+                        <li>Ice cream</li>
+                        <li>Agatha Christie novels</li>
+                        <li>Jane Austin novels</li>
+                        <li>British crime and mystery shows</li>
+                        <li>British period dramas</li>
+                        <li>LOTR</li>
+                    </ul>
+                </div>
+                <div class="col-6">
+                    <h2>Some Super Fun Cool Links</h2>
+                    <div>
+                        <a href="http://mrdoob.com/projects/harmony/" target="blank"><p>mrdoob</p></a>
+                        <a href="https://www.google.com/culturalinstitute/u/0/project/art-project" target="blank"><p>The Google Art Project</p></a>
+                        <a href="http://visualmelt.com/Andy-Goldsworthy" target="blank"><p>Andy Goldsworthy</p></a>
+                        <a href="https://vimeo.com/128428182" target="blank"><p>"Why Beauty Matters"</p></a>
+                        <a href="http://www.heropatterns.com/" target="blank"><p>Repeatable SVG Background Patterns</p></a>
+                    </div>
+                </div>                        
+            </div>                 
         </div>
         <hr class="hr-container-separator">        
         <div class="container" id="container-portfolio">
