Add new about text

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -243,9 +243,10 @@
         </div>
         <hr class="hr-container-separator">
         <div class="container" id="container-about"> 
-            <div class="row">
-                <div class="col-6">
-                    <p id="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sollicitudin ultricies elit. Maecenas vitae enim sed neque cursus pellentesque. Mauris eu nisl pulvinar, ultrices purus nec, mattis ligula. Praesent egestas euismod est a varius. Proin malesuada nulla in sagittis congue. Fusce malesuada est ante, nec tempus magna hendrerit ac. Aliquam venenatis, neque vel sollicitudin tempor, neque quam ultrices ante, quis aliquam dolor mauris in ante. Praesent non nulla tortor.</p>
+            <div class="row justify-content-center">
+                <div class="col-8">
+                    <p id="bio">I'm a software developer whose primary focus has been on front end web development, PHP, and Android. Recently I've entered the world of desktop application development using C# (WPF). I enjoy learning new technologies, reading about best practices, and dreaming up big ideas with my husband (a fellow software developer). I love sharp, clean, and responsive design and I can't wait to see where technology takes us in the years to come. I recently relocated to Dayton, Ohio and have joined two local meetups: Girl Develop It Dayton and Dayton Web Developers. I'm excited to participate in the local development community, expand my knowledge, and make contributions.</p>
+                    <p>Aside from programming, my favorite things include: being entertained by my husband, son, and crazy dog, fine art and art history, camping, hiking, and backpacking in the great outdoors, soccer, floor hockey, ice cream, Agatha Christie novels (especially Poirot), Lord of the Rings, Jane Austin movies, and British crime and mystery shows.</p>
                 </div>
                 <div class="col-6">
                     
